# MatlabToCpp

./: .gitignore  Jenkinsfile  README.md
algorithms/: CMakeLists.txt
algorithms/kalman_filter/: CHANGELOG.md  algorithm.yaml
algorithms/kalman_filter/cpp/: CMakeLists.txt  conanfile.py  test_kalman_filter.cpp
algorithms/kalman_filter/matlab/: codegen_config.m  kalman_filter.m  test_kalman_filter.m
algorithms/kalman_filter/test_vectors/: nominal.json
algorithms/low_pass_filter/: CHANGELOG.md  algorithm.yaml
algorithms/low_pass_filter/cpp/: CMakeLists.txt  conanfile.py  test_low_pass_filter.cpp
algorithms/low_pass_filter/matlab/: codegen_config.m  low_pass_filter.m  test_low_pass_filter.m
algorithms/low_pass_filter/test_vectors/: nominal.json
algorithms/pid_controller/: CHANGELOG.md  algorithm.yaml
algorithms/pid_controller/cpp/: CMakeLists.txt  conanfile.py  test_pid_controller.cpp
algorithms/pid_controller/matlab/: codegen_config.m  pid_controller.m  test_pid_controller.m
algorithms/pid_controller/test_vectors/: nominal.json  schema.json
cmake/: FindGeneratedCode.cmake
conan/profiles/: linux-gcc12-release
demo/: run_demo.py
deploy/ec2/: README.md  docker-compose.yml  setup.sh
deploy/ec2/jenkins/: Dockerfile  casc.yaml  plugins.txt  seed-job.groovy
deploy/ec2/matlab-mock/: install.sh
deploy/ec2/matlab-mock/mock/: mock_matlab.py
deploy/ec2/nexus/: configure-conan.sh
docs/: adding_an_algorithm.md  consuming_packages.md  demo_walkthrough.md  going_to_production.md  test_vector_format.md
docs/diagrams/: pipeline_stages.md  repo_structure.md  responsibility_matrix.md  workflow.md
examples/sensor_pipeline/: CMakeLists.txt  README.md  conanfile.py
examples/sensor_pipeline/src/: main.cpp
scripts/: build_cpp.sh  bump_version.sh  common.sh  detect_changes.sh  generate_reports.sh  notify.sh  publish_conan.sh  run_codegen.sh  run_cpp_tests.sh  run_equivalence.sh  run_matlab_tests.sh
templates/: release_notes.md.j2
